# pyvec.org

./: .gitignore  .travis.yml  CNAME  INSTALL  LICENSE  MANIFEST.in  Makefile  Pipfile  README  README.md  index.html  pyproject.toml  pyvec.py  requirements.pip  requirements.txt  setup.py  stanovy.rtf
.circleci/: config.yml
.github/workflows/: main.yml
cs/: api.json  index.html
cs/kodex-chovani/: index.html
cs/zpracovani-osobnich-udaju/: index.html
en/: api.json  index.html
en/coc/: index.html
en/privacy-policy/: index.html
pyvec/: manage.py  settings.py  urls.py
pyvec/core/fixtures/: initial_data.json
pyvec/settings/: __init__.py  base.py  config.py  local.py
pyvec/settings/logging/: development.ini
pyvec/static/css/: style.css
pyvec/staticc/css/: style.css
pyvec/staticc/js/: function.js
pyvec/templates/: 404.html  505.html
pyvec/templates/box/: hp_listing.html  listing.html
pyvec/templates/inc/: bottom.html  footer.html  menu.html
pyvec/templates/layout/: base.html
pyvec/templates/page/: category-en.html  category.html  listing.html  object.html  staticp.html  staticp_projekty.html
pyvecorg/: __init__.py  avatars.py  build.py  data.py  templating.py  views.py
pyvecorg/data/: coc.yaml  coc.yml  coc_schema.json  members.yml  members_list_schema.json  members_schema.json  meta.yml  meta_schema.json  numbers.yml  objectives.yml  partners.yml  privacy_policy.yml  privacy_policy_schema.json  projects.yml  supporters.yml  supporters_schema.json
pyvecorg/data/definitions/: member_schema.json  note_schema.json  number_schema.json  objective_schema.json  (+2 more)
pyvecorg/static/: main.css
pyvecorg/templates/: coc.html  index.html
src/pyvecorg/: __main__.py  avatars.py  build.py  data.py
static/: main.css
templates/: _base.html  _index_common.html  index.html  index_en.html
tests/: test_data.py  test_python_version.py  test_templating.py
(+22 files in other folders)
