[project]
name = "pyvecorg"
version = "0.0.0"
description = "Pyvec homepage"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "elsa",
    "flask",
    "gspread",
    "markdown",
    "markupsafe",
    "oauth2client",
    "pillow",
    "python-slugify",
    "pyyaml",
    "requests",
    "werkzeug<3",
]

[project.scripts]
pyvecorg = "pyvecorg.__main__:main"

[dependency-groups]
dev = [
    "jsonschema",
    "pytest",
    "pytest-ruff",
    "ruff",
]

[tool.pytest.ini_options]
addopts = "--ruff"

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["uv-build>=0.11.15,<0.12.0"]
build-backend = "uv_build"
