[project]
name = "pyvecorg"
version = "0.0.0"
description = "Pyvec homepage"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "elsa",
    "flask",
    "gspread",
    "markdown",
    "markupsafe",
    "oauth2client",
    "pillow",
    "python-slugify",
    "pyyaml",
    "requests",
    "werkzeug<4",
]

[dependency-groups]
dev = [
    "jsonschema",
    "pytest-ruff",
    "pytest",
    "ruff",
]

[tool.pytest.ini_options]
addopts = "--ruff"

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["uv-build>=0.11.15,<0.12.0"]
build-backend = "uv_build"
